--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -158,7 +158,7 @@ input, textarea {
   left: 0;
   height: 100%;
   width: 100%;
-  background: url('texture.png');
+  background: url('/texture.png');
   z-index: 1;
 }
 
