--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -32,6 +32,74 @@ header, footer, main {
   font-size: 10pt;
 }
 
+.operation {
+  position: relative;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 2s;
+  transition-delay: 0.1s;
+  z-index: 1;
+}
+
+.now_loading {
+  display: block;
+  /* 上位の領域クリック用ボタンを非表示にしているため表示明示指定 */
+  visibility: visible;
+  opacity: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+#omega-psycommu {
+  margin-top: 30vh;
+  margin-bottom: 30vh;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: right;
+  color: lightseagreen;
+  width: 12em;
+  /* （注意）フォント指定は起動時のフォントロード処理と合わせる */
+  font-family: "Inter";
+  font-weight: 800;
+  font-size: 1em;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-delay: 1s;
+}
+
+/* Safariではサブピクセル指定blur()が効きすぎるためSafari以外のみ適用 */
+.with-blur {
+  filter: blur(0.8px);
+}
+
+@keyframes blink {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+#r-op-cont {
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
+}
+
+#status {
+  margin-bottom: 0.3em;
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  border-color: lightseagreen;
+  margin-left: 3em;
+}
+
 input, textarea {
   background-color: black;
   color: white;
@@ -51,6 +119,10 @@ input, textarea {
   display: inline-block;
   margin: 0.5em 0 0.5em 0;
   border: 2px solid lightseagreen;
+}
+
+.properties input:disabled {
+  color: gray;
 }
 
 .property-item {
@@ -85,10 +157,18 @@ input, textarea {
   border-radius: 0.25em;
 }
 
+.property-item > input[type="range"]:disabled::-webkit-slider-runnable-track {
+  background: gray;
+}
+
 .property-item > input[type="range"]::-moz-range-track {
   background: lightseagreen;
   height: 0.5rem;
   border-radius: 0.25em;
+}
+
+.property-item > input[type="range"]:disabled::-moz-range-track {
+  background: gray;
 }
 
 .property-item > input[type="range"]::-webkit-slider-thumb {
@@ -101,6 +181,10 @@ input, textarea {
   transform: scale(2);
 }
 
+.property-item > input[type="range"]:disabled::-webkit-slider-thumb {
+  background-color: gray;
+}
+
 .property-item > input[type="range"]::-moz-range-thumb {
   appearance: none;
   background-color: palegreen;
@@ -109,6 +193,10 @@ input, textarea {
   border: none;
   border-radius: 50%;
   transform: scale(2);
+}
+
+.property-item > input[type="range"]:disabled::-moz-range-thumb {
+  background-color: gray;
 }
 
 .property-item > input[type="number"] {
@@ -125,43 +213,26 @@ input, textarea {
   margin-top: 0.5em;
 }
 
-#qux {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 0.2em;
-  padding-right: 0.4em;
-  width: 8em;
-  font-family: "Saira Stencil One";
-  font-size: 24pt;
-  font-weight: 900;
-  color: #FFFFFF;
-  font-style: italic;
-  position: relative;
-  background-color: transparent;
-  text-align: left;
-  /* 上位の領域クリック用ボタンを非表示にしているため表示明示指定 */
+#preview-canvas {
   visibility: visible;
 }
 
-#qux:after {
-  content: '';
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: url('/texture.png');
-  z-index: 1;
-}
-
-#qux-suffix {
-  vertical-align: -11%; 
+#work-area {
+  display: none;
 }
 
 .displayed-button {
   padding: 0.5em;
 }
+
+/* 動作確認用 */
+/*
+canvas {
+  border-style: solid;
+  border-color: white;
+  border-width: 1px;
+}
+*/
 
 /* 疑似ボタン（クリッカブルにする領域用）を非表示 */
 .pseudo-button {
@@ -251,10 +322,6 @@ input, textarea {
     font-size: 16pt;
   }
 
-  #qux {
-    font-size: 56pt;
-  }
-
   .property-label {
     font-size: medium;
   }
@@ -271,10 +338,6 @@ input, textarea {
 
   #title {
     font-size: 20pt;
-  }
-
-  #qux {
-    font-size: 64pt;
   }
 
   .property-label {
