--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -119,6 +119,7 @@ input, textarea {
   display: inline-block;
   margin: 0.5em 0 0.5em 0;
   border: 2px solid lightseagreen;
+  touch-action: none;
 }
 
 .properties input:disabled {
